--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(fixLabels)
 export(getCompBinning)
 export(minfi)
 import(CNAnorm)
+import(GenomicRanges)
 importFrom(BiocParallel,bplapply)
 importFrom(Matrix,band)
 importFrom(biovizBase,GCcontent)
